<resources>
    <string name="app_name">Express</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string-array name="zona">
        <item>Apodaca</item>
        <item>Cadereyta</item>
        <item>Escobedo</item>
        <item>García</item>
        <item>Guadalupe</item>
        <item>Juárez</item>
        <item>Monterrey</item>
        <item>Salinas Victoria</item>
        <item>San Nicolás de los Garza</item>
        <item>San Pedro Garza García</item>
        <item>Santa Catarina</item>
        <item>Santiago</item>
        <item>Allende</item>
        <item>Montemorelos</item>
        <item>Linares</item>
        <item>General Terán</item>

    </string-array>

    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="te_damos_la_bienvenida">¡Te damos la bienvenida!</string>
    <string name="que_es_lo_que_buscas">¿Qué es lo que buscas?</string>
    <string name="Ofrecer_un_servicio">Ofrecer un servicio</string>
    <string name="Solicitar_un_servicio">Solicitar un servicio</string>
    <string name="Buscar_profesionista">Buscar profesionista</string>
    <string name="Editar_foto_de_perfil">Editar foto de perfil</string>
    <string name="Cambiar_foto">Cambiar foto</string>
    <string name="Eliminar_foto">Eliminar foto</string>
    <string name="Verificación_de_cuenta">Verificación de cuenta</string>
    <string name="Hemos_enviado_un_correo_a_tu_cuenta_para_autenticarla">Hemos enviado un correo a tu cuenta para autenticarla</string>
    <string name="Volver_a_enviar_correo_de_verificación">Volver a enviar correo de verificación</string>
    <string name="Inicia_sesión">Inicia sesión</string>
    <string name="Correo_texto">Correo</string>
    <string name="Contraseña_texto">Contraseña</string>
    <string name="No_tienes_una_cuenta">¿No tienes una cuenta?</string>
    <string name="Registrate_aquí">Registrate aquí</string>
    <string name="Mi_perfil">Mi perfil</string>
    <string name="Guardar_Cambios">Guardar Cambios</string>
    <string name="Nombre">Nombre</string>
    <string name="Mi_nombre">Mi nombre</string>
    <string name="Teléfono">Teléfono</string>
    <string name="Mi_telefóno">Mi telefóno</string>
    <string name="Profesión">Profesión</string>
    <string name="Mi_profesión">Mi profesión</string>
    <string name="Servicios">Servicios</string>
    <string name="Servicios_que_ofrezco">Servicios que ofrezco</string>
    <string name="Cotización">Cotización</string>
    <string name="Cotización_base_por_trabajo">Cotización base por trabajo</string>
    <string name="Descripción">Descripción</string>
    <string name="Descripción_sobre_el_trabajo_que_ofrezco">Descripción sobre el trabajo que ofrezco</string>
    <string name="Telefono_dos_puntos">Telefono:</string>
    <string name="Correo_dos_puntos">Correo:</string>
    <string name="Cotización_dos_puntos">Cotización:</string>
    <string name="Servicios_dos_puntos">Servicios:</string>
    <string name="Descripción_dos_puntos">Descripción:</string>
    <string name="No_especificado">No especificado</string>
    <string name="Agrega_una_descripción_del_trabajo_que_ofreces">Agrega una descripción del trabajo que ofreces</string>
    <string name="Información_general">Información general</string>
    <string name="Crea_una_nueva_cuenta">Crea una nueva cuenta</string>
    <string name="Confirmar_contraseña">Confirmar contraseña</string>
    <string name="Registrarse">Registrarse</string>
    <string name="Agrega_una_foto_de_perfil">Agrega una foto de perfil</string>
    <string name="Agregar_foto">Agregar foto</string>
    <string name="Omitir">Omitir</string>
    <string name="Inicio">Inicio</string>
    <string name="Contactos">Contactos</string>
    <string name="Cerrar_sesión">Cerrar sesión</string>
    <string name="Eliminar_cuenta">Eliminar cuenta</string>
    <string name="Subiendo_imagen">Subiendo imagen</string>
    <string name="Subiento_imagen_a_la_nube">Subiendo imagen a la nube</string>
    <string name="Imagen_cargada_exitosamente">Imagen cargada exitosamente</string>
    <string name="Si_eres_un_profesionista_o_trabajador">Si eres un profesionista o trabajador de oficio que desea ofrecer sus servicios a posibles clientes esta es tu opción</string>
    <string name="Seleccionar_esta_opción">Seleccionar esta opción</string>
    <string name="Si_estás_en_busca_de_un_servicio">Si estás en busca de un servicio o contactar con un profesionista esta es tu opción</string>
    <string name="Eliminar_cuenta_permanentemente">Eliminar cuenta permanentemente</string>
    <string name="Una_vez_que_elimine">Una vez que elimine la cuenta no podrá recuperarla ¿Desea eliminar su cuenta?</string>
    <string name="Sí">Sí</string>
    <string name="Correo_de_verificación_enviado">Correo de verificación enviado</string>
    <string name="Ingrese_un_correo">Ingrese un correo</string>
    <string name="Correo_electrónico_no_verificado">Correo electrónico no verificado</string>
    <string name="Correo_o_contraseña_incorrectas">Correo o contraseña incorrectas</string>
    <string name="Usuario_guardado_en_contactos">Usuario guardado en contactos</string>
    <string name="Eliminar_contacto">Eliminar contacto</string>
    <string name="Desea_eliminar_este_contacto">¿Desea eliminar este contacto?</string>
    <string name="Usuario_eliminado_de_contactos">Usuario eliminado de contactos</string>
    <string name="Debe_llenar_los_espacios_obligatorios">Debe llenar los espacios obligatorios</string>
    <string name="Error_al_autenticar_su_cuenta">Error al autenticar su cuenta, favor de ingresar un correo existente</string>
    <string name="Las_contraseñas_no_coinciden">Las contraseñas no coinciden</string>
    <string name="Calificar_trabajador">Calificar trabajador</string>
    <string name="Enviar">Enviar</string>
    <string name="Zona">"Zona: "</string>
</resources>