<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    app:cardCornerRadius="12dp"
    android:elevation="90dp"
    android:layout_marginTop="50dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:animateLayoutChanges="true"
        android:orientation="vertical"
        android:background="#2F4A4A">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="6dp">

            <ImageView
                android:id="@+id/cardImage"
                android:layout_width="140dp"
                android:layout_height="190dp"
                android:padding="10dp"
                android:background="@drawable/input_box_2"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:paddingRight="14dp"
                android:layout_alignParentLeft="true"/>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="4dp"
                android:layout_marginTop="2dp"
                android:layout_toEndOf="@+id/cardImage"
                android:orientation="vertical"
                android:layout_marginLeft="4dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/cardNombre"
                    android:text="@string/Nombre"
                    android:textColor="@color/colorWhite"
                    android:layout_marginBottom="2dp"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/cardProfesion"
                    android:text="@string/Profesión"
                    android:textSize="16sp"
                    android:textColor="@color/colorWhite"/>

                <TextView
                    android:id="@+id/cardDescripcion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Descripción"
                    android:textSize="16sp"
                    android:textColor="@color/colorWhite"/>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>